--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ limitations under the License.
 <body>
   <div class="tfjs-example-container">
     <section class='title-area'>
-      <h1>Fruits and Veggies Classification</h1>
+      <h1>Group 5 Project Website</h1>
     </section>
 
     <section>
